--- a/Themes/BasicBackground/BasicBackground.theme.css
+++ b/Themes/BasicBackground/BasicBackground.theme.css
@@ -13,7 +13,7 @@
 	--font:							Whitney, Helvetica Neue, Helvetica, Arial, sans-serif;		/* font used in most places														*/
 	--textshadow:					transparent;				/* default: transparent			(textshadow for text ontop of accentcolor nodes, ONLY accepts a color, no px)	*/
 	
-	--background:					url(https://mwittrien.github.io/BetterDiscordAddons/Themes/BasicBackground/background.jpg);	/* general background image						*/
+	--background:					url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwallpapersafari.com%2Fw%2FTsQhtR&psig=AOvVaw2EC39e1XOqHGj9NXVqe2gu&ust=1598424317335000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCMjVgfTgtesCFQAAAAAdAAAAABAS);	/* general background image						*/
 	--backgroundsize:				cover;						/* default: cover				(sizefit of general background - values: [cover/contain/auto])					*/
 	--backgroundblur:				0px;						/* default: 0px					(only works when --background is set to an image)								*/
 	
